# libelectricity

./: AbstractElModel.cpp  AbstractElModel.h  AbstractModel.cpp  AbstractModel.h  ActiveLoadDivider.cpp  ActiveLoadDivider.h  AllLoadDivider.cpp  AllLoadDivider.h  CMakeLists.txt  Consumer.cpp  Consumer.h  Convinience_functions.h  DG.cpp  DG.h  Drive.cpp  Drive.h  GRU.cpp  GRU.h  GRU_functions.h  LoadDivider.cpp  ModelRunner.cpp  ModelRunner.h  PID.cc  PID.h  Propeller.cpp  Propeller.h  Propulsion.cc  Propulsion.h  Q.h  Q_withDisc.h  RintCalculator.cpp  RintCalculator.h  ShipOnRails.cpp  ShipOnRails.h  SimpleDrive.cpp  SimpleDrive.h  Source.cpp  Source.h  main.cpp
Base/: AbstractElModel.cpp  AbstractElModel.h  AbstractModel.h  Ba.cpp  Ba.h  CMakeLists.txt  PID.cc  PID.h
Consumers/: CMakeLists.txt  Co.cpp  Co.h  Consumer.cpp  Consumer.h  SimpleDrive.cpp  SimpleDrive.h
GRU/: CMakeLists.txt  G.cpp  G.h  GRU.cpp  GRU.h  LoadDivider.h
Q/: CMakeLists.txt  Q.cpp  Q.h  Q_withDisc.cpp  Q_withDisc.h
Ships/: CMakeLists.txt  Drive.cpp  Drive.h  Propeller.h  Propulsion.cpp  Propulsion.h  Sh.cpp  Sh.h  ShipOnRails.h
Sources/: CMakeLists.txt  DG.h  RintCalculator.h  Sou.cpp  Sou.h  Source.cpp  Source.h
tests/: AbstractElModel_Test.cpp  AbstractElModel_Test.h  CMakeLists.txt  Consumer_Test.h  DG_Test.cpp  DG_Test.h  GRU_Test.cpp  GRU_Test.h  LoadDivider_Test.cpp  LoadDivider_Test.h  PI_Test.cpp  PI_Test.h  Q_Test.h  RintCalculator_Test.cpp  RintCalculator_Test.h  SimpleDrive_Test.cpp  SimpleDrive_Test.h  SourceModel_Test.cpp  SourceModel_Test.h  tests.cpp
tests/Functional/: CMakeLists.txt
tests/Functional/AbstractElModel/: AbstractElModel_Test.cpp  CMakeLists.txt
tests/Functional/Consumer/: CMakeLists.txt  Consumer_Test.cpp
tests/Functional/DG/: CMakeLists.txt
tests/Functional/GRU/: CMakeLists.txt
tests/Functional/LoadDivider/: CMakeLists.txt  LoadDivider_Test.cpp  LoadDivider_Test.h
tests/Functional/PI/: CMakeLists.txt  PI_Test.h
tests/Functional/Q/: CMakeLists.txt  Q_Test.cpp
tests/Functional/RintCalculator/: CMakeLists.txt  RintCalculator_Test.cpp  RintCalculator_Test.h
tests/Functional/SimpleDrive/: CMakeLists.txt  SimpleDrive_Test.cpp  SimpleDrive_Test.h
tests/Functional/SourceModel/: CMakeLists.txt  SourceModel_Test.cpp  SourceModel_Test.h
tests/Integration/GRU/: CMakeLists.txt
tests/Stress/: CMakeLists.txt
tests/Stress/AbstractElModel/: CMakeLists.txt  MultithreadWorkTest.cpp  MultithreadWorkTest.h
